--- a/codeisc/templates/codeisc/create_answer_page.html
+++ b/codeisc/templates/codeisc/create_answer_page.html
@@ -7,27 +7,45 @@
           class="bg-gray-200 w-1/2 mx-auto items-center justify-center px-5 border-2 border-red-500 py-3 rounded my-4">
         {% csrf_token %}
         <div class="mb-4">
-            <label class="block text-center font-bold text-lg mb-2">Short Description</label>
+            <label class="block text-center font-bold text-lg mb-2">Title</label>
             {{ form.short_description }}
+            {% if form.short_description.errors %}
+                <ul class="text-red-500 list-disc pl-4 mt-2">
+                    {% for error in form.short_description.errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
         </div>
         <div class="mb-4">
             <label class="block text-center font-bold text-lg mb-2">Description</label>
             {{ form.description }}
+            {% if form.description.errors %}
+                <ul class="text-red-500 list-disc pl-4 mt-2">
+                    {% for error in form.description.errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
         </div>
         <div class="mb-4">
             <label class="block text-center font-bold text-lg mb-2">Code</label>
             <p class="text-decoration-none text-gray-800 hover:text-gray-900 font-bold py-2 px-4 rounded">Select A
                 Code</p>
             {{ form.code }}
+            {% if form.code.errors %}
+                <ul class="text-red-500 list-disc pl-4 mt-2">
+                    {% for error in form.code.errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
         </div>
         <div class="flex items-center justify-center">
             <button type="submit"
                     class="bg-gray-200 hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded">
                 Answer The Question
             </button>
-        </div>
-        <div>errors:
-            {{ form.errors }}
         </div>
     </form>
 {% endblock %}
