--- a/codeisc/templates/codeisc/create_code_page.html
+++ b/codeisc/templates/codeisc/create_code_page.html
@@ -1,28 +1,58 @@
 {% extends '_layout.html' %}
 {% block title %}
-MiniCodes - Share a code
+    MiniCodes - Share a code
 {% endblock %}
 {% block content %}
-    <form method="post" id="codeCreateForm" class="bg-gray-200 w-1/2 mx-auto items-center justify-center px-5 border-2 border-red-500 py-3 rounded my-4">
+    <form method="post" id="codeCreateForm"
+          class="bg-gray-200 w-1/2 mx-auto items-center justify-center px-5 border-2 border-red-500 py-3 rounded my-4">
         {% csrf_token %}
         <div class="mb-4">
-            <label class="block text-center font-bold text-lg mb-2">Short Description</label>
+            <label class="block text-center font-bold text-lg mb-2">Title</label>
             {{ form.short_description }}
+            {% if form.short_description.errors %}
+                <ul class="text-red-500 list-disc pl-4 mt-2">
+                    {% for error in form.short_description.errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
         </div>
         <div class="mb-4">
             <label class="block text-center font-bold text-lg mb-2">Description</label>
             {{ form.description }}
+            {% if form.description.errors %}
+                <ul class="text-red-500 list-disc pl-4 mt-2">
+                    {% for error in form.description.errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
         </div>
         <div class="mb-4">
             <label class="block text-center font-bold text-lg mb-2">Code</label>
             {{ form.code_text }}
+            {% if form.code_text.errors %}
+                <ul class="text-red-500 list-disc pl-4 mt-2">
+                    {% for error in form.code_text.errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
         </div>
         <div class="mb-4">
             <label class="block text-center font-bold text-lg mb-2">Type</label>
             {{ form.type }}
+            {% if form.type.errors %}
+                <ul class="text-red-500 list-disc pl-4 mt-2">
+                    {% for error in form.type.errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
         </div>
         <div class="flex items-center justify-center">
-            <input type="submit" value="Post A Code" class="bg-gray-200 hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded">
+            <input type="submit" value="Post A Code"
+                   class="bg-gray-200 hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded">
         </div>
     </form>
 {% endblock %}
