--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -16,6 +16,7 @@
         MiniCodes
     {% endblock title %}</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="{% static 'js/hamburger menu.js' %}"></script>
 
     {% block styles %}
 
