--- a/users/templates/users/user_page.html
+++ b/users/templates/users/user_page.html
@@ -10,44 +10,49 @@
 {% endblock %}
 {% block content %}
     <main class="profile-page">
-        <section class="relative block h-screen">
-            <div class="absolute top-0 w-full h-full bg-center bg-cover" style="
-            background-image: url('https://images.unsplash.com/photo-1499336315816-097655dcfbda?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=2710&amp;q=80');
-        ">
+        <section class="relative block h-500-px">
+            <div class="absolute top-0 w-full h-full bg-center bg-cover"
+                 style="background-image: linear-gradient(to bottom right, #55d4a1, #7c59cb);">
                 <span id="blackOverlay" class="w-full h-full absolute opacity-50 bg-black"></span>
             </div>
+            <div class="top-auto bottom-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden h-70-px">
+                <svg class="absolute bottom-0 overflow-hidden" xmlns="http://www.w3.org/2000/svg"
+                     preserveAspectRatio="none" version="1.1" viewBox="0 0 2560 100" x="0" y="0">
+                    <polygon class="text-blueGray-200 fill-current" points="2560 0 2560 100 0 100"></polygon>
+                </svg>
+            </div>
         </section>
-        <div class="top-auto bottom-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden"
-             style="transform: translateZ(0px)">
-            <svg class="absolute bottom-0 overflow-hidden" xmlns="http://www.w3.org/2000/svg"
-                 preserveAspectRatio="none" version="1.1" viewBox="0 0 2560 100" x="0" y="0">
-                <polygon class="text-blueGray-200 fill-current" points="2560 0 2560 100 0 100"></polygon>
-            </svg>
-        </div>
         <section class="relative py-16 bg-blueGray-200">
             <div class="container mx-auto px-4">
                 <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-xl rounded-lg -mt-64">
                     <div class="px-6">
                         <div class="flex flex-wrap justify-center">
-                            <div class="w-full lg:w-1/2 px-4 lg:order-2 flex justify-center">
+                            <div class="w-full lg:w-3/12 px-4 lg:order-2 flex justify-center">
                                 <div class="relative">
-                                    <img alt="{{ user.username }} profile picture" src="{{ user.profile.url }}"
-                                         class="shadow-xl rounded-full h-auto align-middle border-none absolute -m-16 -ml-20 lg:-ml-16 w-40 h-40">
+                                    <img alt="{{ user.username }} profile picture"
+                                         src="{{ user.profile.url }}"
+                                         class="shadow-xl rounded-full h-auto mt-10 align-middle border-none absolute -m-16 -ml-20 lg:-ml-16 max-w-150-px">
                                 </div>
                             </div>
-
+                            <div class="w-full lg:w-4/12 px-4 lg:order-3 lg:text-right lg:self-center">
+                                <div class="py-6 px-3 mt-32 sm:mt-0">
+                                    <button class="uppercase text-white font-bold text-xs px-4 py-2 rounded outline-none focus:outline-none sm:mr-2 mb-1 ease-linear transition-all duration-150"
+                                            type="button">
+                                    </button>
+                                </div>
+                            </div>
                             <div class="w-full lg:w-4/12 px-4 lg:order-1">
-                                <div class="flex justify-center py-4 lg:pt-4 pt-8">
+                                <div class="flex justify-center py-4 lg:pt-4 pt-8 sm:mt-12">
                                     <div class="mr-4 p-3 text-center">
-                                        <span class="text-xl font-bold block uppercase tracking-wide text-blueGray-600">{{ codes_count }}</span><span
+                                        <span class="block text-xl font-bold block uppercase tracking-wide text-blueGray-600">{{ codes_count }}</span><span
                                             class="text-sm text-blueGray-400">Codes</span>
                                     </div>
                                     <div class="mr-4 p-3 text-center">
-                                        <span class="text-xl font-bold block uppercase tracking-wide text-blueGray-600">{{ questions_count }}</span><span
+                                        <span class="block text-xl font-bold block uppercase tracking-wide text-blueGray-600">{{ questions_count }}</span><span
                                             class="text-sm text-blueGray-400">Questions</span>
                                     </div>
                                     <div class="lg:mr-4 p-3 text-center">
-                                        <span class="text-xl font-bold block uppercase tracking-wide text-blueGray-600">{{ answers_count }}</span><span
+                                        <span class="block text-xl font-bold block uppercase tracking-wide text-blueGray-600">{{ answers_count }}</span><span
                                             class="text-sm text-blueGray-400">Answers</span>
                                     </div>
                                 </div>
@@ -58,7 +63,7 @@
                                 {{ user.first_name|add:" "|add:user.last_name }}
                             </h3>
                             <div class="text-sm leading-normal mt-0 mb-2 text-blueGray-400 font-bold uppercase">
-                                <i class="fas fa-map-marker-alt mr-2 text-lg text-blueGray-400"></i>
+                                <i class="fas fa-user alt mr-2 text-lg text-blueGray-400"></i>
                                 {{ user.username }}
                             </div>
                             <div class="mb-2 text-blueGray-600 mt-10">
