--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -19,7 +19,7 @@
                 </svg>
             </button>
             <div id="hamburger-menu"
-                 class="hidden absolute w-max top-8 right-0 left-4 mt-2 mr-2 bg-white rounded-lg shadow-md">
+                 class="z-10 hidden absolute w-max top-8 right-0 left-4 mt-2 mr-2 bg-white rounded-lg shadow-md">
                 <ul class="py-2 px-4 ">
                     <li class="my-2 p-2 rounded-lg">
                         <a href="{% url 'CreateQuestion' %}" class="text-gray-600 hover:text-blue-500">Ask a question</a>
