--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -22,7 +22,8 @@
                  class="z-10 hidden absolute w-max top-8 right-0 left-4 mt-2 mr-2 bg-white rounded-lg shadow-md">
                 <ul class="py-2 px-4 ">
                     <li class="my-2 p-2 rounded-lg">
-                        <a href="{% url 'CreateQuestion' %}" class="text-gray-600 hover:text-blue-500">Ask a question</a>
+                        <a href="{% url 'CreateQuestion' %}" class="text-gray-600 hover:text-blue-500">Ask a
+                            question</a>
                     </li>
                     <hr class="bg-black h-1">
                     <li class="my-2 p-2 rounded-lg">
@@ -48,15 +49,17 @@
                     placeholder="Search"
             />
             {% if user.is_authenticated %}
-                <div class="ml-4 flex items-center text-white">
+                <a href="{% url 'profile' %}">
+                    <div class="ml-4 flex items-center text-white">
                     <span class="mr-2">Logged in as <span
                             class="block w-full whitespace-nowrap">{{ user.username }}</span></span>
-                    <img
-                            class="h-8 w-8 rounded-full"
-                            src="{{ user.profile.url }}"
-                            alt="{{ user.nickname|add:"Profile Image" }}"
-                    />
-                </div>
+                        <img
+                                class="h-8 w-8 rounded-full"
+                                src="{{ user.profile.url }}"
+                                alt="{{ user.nickname|add:"Profile Image" }}"
+                        />
+                    </div>
+                </a>
             {% else %}
                 <a href="{% url 'login' %}">
                     <div class="ml-4 flex items-center text-white">
