--- a/users/templates/users/user_page.html
+++ b/users/templates/users/user_page.html
@@ -1,6 +1,6 @@
 {% extends '_layout.html' %}
 {% block title %}
-    {{ user.first_name|title|add:" "|add:user.last_name|title }}
+    {{ user_profile_object.first_name|title|add:" "|add:user_profile_object.last_name|title }}
 {% endblock %}
 {% block styles %}
     <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/styles/tailwind.css">
@@ -29,16 +29,24 @@
                         <div class="flex flex-wrap justify-center">
                             <div class="w-full lg:w-3/12 px-4 lg:order-2 flex justify-center">
                                 <div class="relative">
-                                    <img alt="{{ user.username }} profile picture"
-                                         src="{{ user.profile.url }}"
+                                    <img alt="{{ user_profile_object.username }} profile picture"
+                                         src="{{ user_profile_object.profile.url }}"
                                          class="shadow-xl rounded-full h-auto mt-10 align-middle border-none absolute -m-16 -ml-20 lg:-ml-16 max-w-150-px">
                                 </div>
                             </div>
                             <div class="w-full lg:w-4/12 px-4 lg:order-3 lg:text-right lg:self-center">
                                 <div class="py-6 px-3 mt-32 sm:mt-0">
-                                    <button class="uppercase text-white font-bold text-xs px-4 py-2 rounded outline-none focus:outline-none sm:mr-2 mb-1 ease-linear transition-all duration-150"
-                                            type="button">
-                                    </button>
+
+                                    {% if user == user_profile_object %}
+                                        <button class="text-black bg-gray-900 uppercase text-white font-bold text-xs px-4 py-2 rounded outline-none focus:outline-none sm:mr-2 mb-1 ease-linear transition-all duration-150"
+                                                type="button">
+                                            Hidden Menu
+                                        </button>
+                                    {% else %}
+                                        <button class="uppercase text-white font-bold text-xs px-4 py-2 rounded outline-none focus:outline-none sm:mr-2 mb-1 ease-linear transition-all duration-150"
+                                                type="button">
+                                        </button>
+                                    {% endif %}
                                 </div>
                             </div>
                             <div class="w-full lg:w-4/12 px-4 lg:order-1">
@@ -60,22 +68,22 @@
                         </div>
                         <div class="text-center mt-12">
                             <h3 class="text-4xl font-semibold leading-normal mb-2 text-blueGray-700 mb-2">
-                                {{ user.first_name|add:" "|add:user.last_name }}
+                                {{ user_profile_object.first_name|add:" "|add:user_profile_object.last_name }}
                             </h3>
                             <div class="text-sm leading-normal mt-0 mb-2 text-blueGray-400 font-bold uppercase">
                                 <i class="fas fa-user alt mr-2 text-lg text-blueGray-400"></i>
-                                {{ user.username }}
+                                {{ user_profile_object.username }}
                             </div>
                             <div class="mb-2 text-blueGray-600 mt-10">
                                 <i class="fa fa-calendar mr-2 text-lg text-blueGray-400"></i>
-                                Joined at: {{ user.date_joined|date:"F, j, Y" }}
+                                Joined at: {{ user_profile_object.date_joined|date:"F, j, Y" }}
                             </div>
                         </div>
                         <div class="mt-10 py-10 border-t border-blueGray-200 text-center">
                             <div class="flex flex-wrap justify-center">
                                 <div class="w-full lg:w-9/12 px-4">
                                     <p class="mb-4 text-lg leading-relaxed text-blueGray-700">
-                                        {{ user.description }}
+                                        {{ user_profile_object.description }}
                                     </p>
                                 </div>
                             </div>
