--- a/codeisc/templates/codeisc/includes/answer.html
+++ b/codeisc/templates/codeisc/includes/answer.html
@@ -1,15 +1,21 @@
-<div class="bg-white p-4 rounded-lg shadow">
+{% load language_map %}
+<div class="bg-gray-200 p-4 mb-2 rounded-lg shadow">
     <h2 class="text-2xl font-bold">{{ answer.short_description }}</h2>
     <p class="text-gray-600">{{ answer.description }}</p>
 
-    {% include 'codeisc/includes/code.html' with code=answer.code%}
-
-    <div class="flex items-center text-gray-500 mt-2">
-        <div class="mr-2">{{ answer.created_at|date:"F j, Y" }}</div>
-        <img
-                class="h-6 w-6 rounded-full"
-                src="{{ answer.author.profile.url }}"
-                alt="{{ answer.author.username }} profile picture"
-        />
+    <div class="flex flex-row bg-gray-100 p-4">
+        {% for code in answer.code.all %}
+            {% include 'codeisc/includes/code.html' with code=code code_language=language_mapping|get_from_dict:code.type %}
+        {% endfor %}
     </div>
+    <a class="appearance-none" href="{% url 'userProfile' username=question.author.username %}">
+        <div class="flex items-center text-gray-500 mt-2">
+            <div class="mr-2">{{ answer.created_at|date:"F j, Y" }}</div>
+            <img
+                    class="h-6 w-6 rounded-full"
+                    src="{{ answer.author.profile.url }}"
+                    alt="{{ answer.author.username }} profile picture"
+            />
+        </div>
+    </a>
 </div>
