--- a/codeisc/templates/codeisc/includes/code.html
+++ b/codeisc/templates/codeisc/includes/code.html
@@ -1,6 +1,6 @@
 {% load pygmentify_tags %}
 
-<div class="bg-white p-4 rounded-lg shadow mb-2">
+<div class="bg-white p-4 rounded-lg shadow mb-2 w-full">
     <h2 class="text-2xl font-bold">{{ code.short_description }}</h2>
     <div class="mb-4">
         {% pygmentify %}
@@ -8,14 +8,16 @@
         {% endpygmentify %}
     </div>
     <button type="button" style="display: none" id="expand-button">Expand</button>
-    <div class="flex items-center text-gray-500 mt-2">
-        <div class="mr-2">{{ code.created_at|date:"F j, Y" }}</div>
-        <img
-                class="h-6 w-6 rounded-full"
-                src="{{ code.author.profile.url }}"
-                alt="{{ code.author.username }} profile picture"
-        />
-    </div>
+    <a class="appearance-none" href="{% url 'userProfile' username=question.author.username %}">
+        <div class="flex items-center text-gray-500 mt-2">
+            <div class="mr-2">{{ code.created_at|date:"F j, Y" }}</div>
+            <img
+                    class="h-6 w-6 rounded-full"
+                    src="{{ code.author.profile.url }}"
+                    alt="{{ code.author.username }} profile picture"
+            />
+        </div>
+    </a>
 </div>
 
 <script>
