--- a/codeisc/templates/codeisc/includes/question.html
+++ b/codeisc/templates/codeisc/includes/question.html
@@ -1,14 +1,16 @@
 <div class="bg-white p-4 rounded-lg shadow">
     <a class="appearance-none" href="{% url 'QuestionPage' questionID=question.pk %}">
-    <h2 class="text-2xl font-bold">{{ question.short_description }}</h2>
-    <p class="text-gray-600">{{ question.description|truncatechars:100 }}</p>
-    <div class="flex items-center text-gray-500 mt-2">
-        <div class="mr-2">{{ question.created_at|date:"F j, Y" }}</div>
-        <img
-                class="h-6 w-6 rounded-full"
-                src="{{ question.author.profile.url }}"
-                alt="{{ question.author.username }} profile picture"
-        />
-    </div>
+        <h2 class="text-2xl font-bold">{{ question.short_description }}</h2>
+        <p class="text-gray-600">{{ question.description|truncatechars:100 }}</p>
+        <a class="appearance-none" href="{% url 'userProfile' username=question.author.username %}">
+            <div class="flex items-center text-gray-500 mt-2">
+                <div class="mr-2">{{ question.created_at|date:"F j, Y" }}</div>
+                <img
+                        class="h-6 w-6 rounded-full"
+                        src="{{ question.author.profile.url }}"
+                        alt="{{ question.author.username }} profile picture"
+                />
+            </div>
+        </a>
     </a>
 </div>
