Fixed The format of question page

--- a/codeisc/templates/codeisc/question_page.html
+++ b/codeisc/templates/codeisc/question_page.html
@@ -29,7 +29,7 @@
                                                 class="text-blue-500">
                 <div class="flex items-center flex-column text-gray-500 mt-2">
                     <div class="flex space-x-2">
-                        <div class="mr-2"><span class="text-black">Author:</span> {{ question.author.username }}</div>
+                        <div><span class="text-black">Author:</span> {{ question.author.username }}</div>
                         <img class="h-6 w-6 rounded-full" src="{{ question.author.profile.url }}"
                              alt="{{ question.author.username }} profile picture"/>
                     </div>
