--- a/users/templates/users/user_page.html
+++ b/users/templates/users/user_page.html
@@ -38,10 +38,19 @@
                                 <div class="py-6 px-3 mt-32 sm:mt-0">
 
                                     {% if user == user_profile_object %}
-                                        <button class="text-black bg-gray-900 uppercase text-white font-bold text-xs px-4 py-2 rounded outline-none focus:outline-none sm:mr-2 mb-1 ease-linear transition-all duration-150"
+                                        <button onclick="toggleHamburgerMenu()" class="text-black bg-gray-900 uppercase text-white font-bold text-xs px-4 py-2 rounded outline-none focus:outline-none sm:mr-2 mb-1 ease-linear transition-all duration-150"
                                                 type="button">
                                             Hidden Menu
                                         </button>
+                                        <div id="hamburger-menu"
+                                             class="z-10 hidden absolute w-max top-8 right-0 left-4 mt-2 mr-2 bg-white rounded-lg shadow-md">
+                                            <ul class="py-2 px-4 ">
+                                                <li class="my-2 p-2 rounded-lg">
+                                                    <a href="{% url 'delete_account' %}"
+                                                       class="text-red-900 hover:text-blue-500 font-semibold">Delete Account</a>
+                                                </li>
+                                            </ul>
+                                        </div>
                                     {% else %}
                                         <button class="uppercase text-white font-bold text-xs px-4 py-2 rounded outline-none focus:outline-none sm:mr-2 mb-1 ease-linear transition-all duration-150"
                                                 type="button">
