--- a/users/templates/users/login_page.html
+++ b/users/templates/users/login_page.html
@@ -9,24 +9,11 @@
         <div>
             <label class="block text-center font-weight-bold text-lg">User Name</label>
             {{ form.username }}
-            {% if form.username.errors %}
-                <ul class="text-red-500 list-disc pl-4 mt-2">
-                    {% for error in form.username.errors %}
-                        <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
-            {% endif %}
+
         </div>
         <div>
             <label class="block text-center font-weight-bold text-lg">Password</label>
             {{ form.password }}
-            {% if form.password.errors %}
-                <ul class="text-red-500 list-disc pl-4 mt-2">
-                    {% for error in form.password.errors %}
-                        <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
-            {% endif %}
         </div>
         <div class="flex items-baseline justify-center">
             <a href="{% url 'register' %}"
@@ -34,9 +21,20 @@
                 Don't Have an account? Register
             </a>
         </div>
-        <div class="flex items-baseline justify-center">
-            <input type="submit" value="Login"
-                   class="px-6 py-2 mt-4 text-white bg-blue-600 rounded-lg hover:bg-blue-900">
+        <div class="text-center">
+            <button type="submit"
+                    class="bg-gray-900 text-white active:bg-gray-700 uppercase text-sm font-bold px-6 py-3 rounded shadow hover:bg-gray-800 outline-none focus:outline-none mr-1 mb-1 w-1/4">
+                Login
+            </button>
         </div>
+        {% if form.errors %}
+            <ul class="text-red-900 list-disc pl-4 mt-2">
+                {% for field, errors in form.errors.items %}
+                    {% for error in errors %}
+                        <li>{{ field }}: {{ error }}</li>
+                    {% endfor %}
+                {% endfor %}
+            </ul>
+        {% endif %}
     </form>
 {% endblock %}
